tests/valid/v05_if_failure.tsl
# VALID TEST 5: IF failure condition
# Tests: IF FAILURE branch

TASK backupDB {
    RUN "backup.sh"
    EVERY DAY AT 02:00
}

TASK alertAdmin {
    RUN "alert.sh"
    AFTER backupDB
    IF failure
}
