tests/invalid/i05_missing_task_keyword.tsl
# INVALID TEST 5: Missing TASK keyword
# Expected error: syntax error — program must start with TASK

backupDB {
    RUN "backup.sh"
    EVERY DAY AT 02:00
}
